--- a/K8s/secrets-configmap.yml
+++ b/K8s/secrets-configmap.yml
@@ -12,7 +12,7 @@ type: Opaque
 data:
   # Base64 encoded: Your JSON Web Token Secret
   # JWT Secret: 'eyJhbGciOiJIUzI1NiJ9.eyJSb2xlIjoiQWRtaW4iLCJJc3N1ZXIiOiJJc3N1ZXIiLCJVc2VybmFtZSI6IkphdmFJblVzZSIsImV4cCI6MTc0NDg2NjA3NCwiaWF0IjoxNzQ0ODY2MDc0fQ.fsUmxSXP_tEYjmV6d_-wcykDeLRUd2bThNEOBb7NhcU'
-  jwt-secret: "ZXlqYWxjaU9pSko...R7NhcU"
+  jwt-secret: "ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKU2IyeGxJam9pUVdSdGFXNGlMQ0pKYzNOMVpYSWlPaUpKYzNOMVpYSWlMQ0pWYzJWeWJtRnRaU0k2SWtwaGRtRkpibFZ6WlNJc0ltVjRjQ0k2TVRjME5EZzJOakEzTkN3aWFXRjBJam94TnpRME9EWTJNRGMwZlEuZnNVbXhTWFBfdEVZam1WNmRfLXdjeWtEZUxSVWQyYlRoTkVPQmI3TmhjVQ=="
 
   # Base64 encoded: MongoDB Root Password (Example: 'MongoRoot123!')
   mongo-root-password: "TW9uZ29Sb290MTIzIQ=="
